--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "element-ui",
+  "name": "element-ui-wangzhu",
   "version": "2.15.3",
   "description": "A Component Library for Vue.js.",
   "main": "lib/element-ui.common.js",
